# OpenRGB-System-Rust

./: .gitignore  Cargo.toml  README.md
src/: config-example.toml  first_test.rs  lib.rs  main.rs  parser.rs
