[package]
name = "openrgb-system-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openrgb = "0.1.2"
tokio = { version = "1", features = ["full"]}
sysinfo = "0.26.2"
ctrlc = { version  =  "3.2", features = ["termination"] }