[package]
name = "openrgb-system-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openrgb = "0.1.2"
tokio = { version = "1", features = ["full"]}
sysinfo = "0.26.2"
ctrlc = { version  =  "3.2", features = ["termination"] }
home = "0.5.3"
toml = "0.5.9"
serde_derive = "1.0.145"
serde = "1.0.0"
rgb = "0.8.34"

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"

[[bin]]
name = "first_test"
path = "src/first_test.rs"

[[bin]]
name = "openrgb-system-rust"
path = "src/main.rs"

[[bin]]
name = "parser"
path = "src/parser.rs"

